--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.16.0",
     "recharts": "^2.7.3",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.32.6",
     "use-debounce": "^9.0.4",
     "uuid": "^9.0.1",
     "video.js": "^8.5.2",
