--- a/.gitignore
+++ b/.gitignore
@@ -603,3 +603,141 @@ streammasterwebui/.next/types/app/layout.ts
 streammasterwebui/.next/types/app/editor/files/page.ts
 streammasterwebui/.next/types/app/editor/playlist/page.ts
 streammasterwebui/.next/types/app/editor/streamgroup/page.ts
+streammasterwebui/.next/app-path-routes-manifest.json
+streammasterwebui/.next/BUILD_ID
+streammasterwebui/.next/export-detail.json
+streammasterwebui/.next/next-minimal-server.js.nft.json
+streammasterwebui/.next/next-server.js.nft.json
+streammasterwebui/.next/prerender-manifest.js
+streammasterwebui/.next/required-server-files.json
+streammasterwebui/.next/routes-manifest.json
+streammasterwebui/.next/cache/next-minimal-server.js.nft.json
+streammasterwebui/.next/cache/next-server.js.nft.json
+streammasterwebui/.next/cache/webpack/client-production/3.pack
+streammasterwebui/.next/cache/webpack/client-production/4.pack
+streammasterwebui/.next/cache/webpack/client-production/5.pack
+streammasterwebui/.next/cache/webpack/client-production/6.pack
+streammasterwebui/.next/cache/webpack/client-production/7.pack
+streammasterwebui/.next/cache/webpack/client-production/8.pack
+streammasterwebui/.next/cache/webpack/client-production/9.pack
+streammasterwebui/.next/cache/webpack/client-production/10.pack
+streammasterwebui/.next/cache/webpack/client-production/11.pack
+streammasterwebui/.next/cache/webpack/client-production/12.pack
+streammasterwebui/.next/cache/webpack/client-production/13.pack
+streammasterwebui/.next/cache/webpack/client-production/14.pack
+streammasterwebui/.next/cache/webpack/client-production/15.pack
+streammasterwebui/.next/cache/webpack/client-production/16.pack
+streammasterwebui/.next/cache/webpack/client-production/17.pack
+streammasterwebui/.next/cache/webpack/server-production/2.pack
+streammasterwebui/.next/cache/webpack/server-production/3.pack
+streammasterwebui/.next/cache/webpack/server-production/4.pack
+streammasterwebui/.next/cache/webpack/server-production/5.pack
+streammasterwebui/.next/cache/webpack/server-production/6.pack
+streammasterwebui/.next/cache/webpack/server-production/7.pack
+streammasterwebui/.next/cache/webpack/server-production/8.pack
+streammasterwebui/.next/cache/webpack/server-production/9.pack
+streammasterwebui/.next/cache/webpack/server-production/10.pack
+streammasterwebui/.next/cache/webpack/server-production/11.pack
+streammasterwebui/.next/cache/webpack/server-production/12.pack
+streammasterwebui/.next/cache/webpack/server-production/13.pack
+streammasterwebui/.next/cache/webpack/server-production/14.pack
+streammasterwebui/.next/cache/webpack/server-production/15.pack
+streammasterwebui/.next/cache/webpack/server-production/16.pack
+streammasterwebui/.next/cache/webpack/server-production/17.pack
+streammasterwebui/.next/cache/webpack/server-production/18.pack
+streammasterwebui/.next/cache/webpack/server-production/19.pack
+streammasterwebui/.next/server/font-manifest.json
+streammasterwebui/.next/server/functions-config-manifest.json
+streammasterwebui/.next/server/app/_not-found_client-reference-manifest.js
+streammasterwebui/.next/server/app/_not-found.js
+streammasterwebui/.next/server/app/_not-found.js.nft.json
+streammasterwebui/.next/server/app/page_client-reference-manifest.js
+streammasterwebui/.next/server/app/page.js
+streammasterwebui/.next/server/app/page.js.nft.json
+streammasterwebui/.next/server/app/editor/files/page.js.nft.json
+streammasterwebui/.next/server/app/editor/playlist/page.js.nft.json
+streammasterwebui/.next/server/app/editor/streamgroup/page.js.nft.json
+streammasterwebui/.next/server/app/queuestatus/page_client-reference-manifest.js
+streammasterwebui/.next/server/app/queuestatus/page.js
+streammasterwebui/.next/server/app/queuestatus/page.js.nft.json
+streammasterwebui/.next/server/app/settings/page_client-reference-manifest.js
+streammasterwebui/.next/server/app/settings/page.js
+streammasterwebui/.next/server/app/settings/page.js.nft.json
+streammasterwebui/.next/server/app/streamingstatus/page_client-reference-manifest.js
+streammasterwebui/.next/server/app/streamingstatus/page.js
+streammasterwebui/.next/server/app/streamingstatus/page.js.nft.json
+streammasterwebui/.next/server/chunks/37.js
+streammasterwebui/.next/server/chunks/74.js
+streammasterwebui/.next/server/chunks/187.js
+streammasterwebui/.next/server/chunks/208.js
+streammasterwebui/.next/server/chunks/228.js
+streammasterwebui/.next/server/chunks/245.js
+streammasterwebui/.next/server/chunks/254.js
+streammasterwebui/.next/server/chunks/272.js
+streammasterwebui/.next/server/chunks/274.js
+streammasterwebui/.next/server/chunks/528.js
+streammasterwebui/.next/server/chunks/545.js
+streammasterwebui/.next/server/chunks/548.js
+streammasterwebui/.next/server/chunks/580.js
+streammasterwebui/.next/server/chunks/755.js
+streammasterwebui/.next/server/chunks/772.js
+streammasterwebui/.next/server/chunks/787.js
+streammasterwebui/.next/server/chunks/789.js
+streammasterwebui/.next/server/chunks/791.js
+streammasterwebui/.next/server/chunks/848.js
+streammasterwebui/.next/server/chunks/870.js
+streammasterwebui/.next/server/chunks/976.js
+streammasterwebui/.next/server/chunks/font-manifest.json
+streammasterwebui/.next/server/pages/_app.js
+streammasterwebui/.next/server/pages/_app.js.nft.json
+streammasterwebui/.next/server/pages/_document.js
+streammasterwebui/.next/server/pages/_document.js.nft.json
+streammasterwebui/.next/server/pages/_error.js
+streammasterwebui/.next/server/pages/_error.js.nft.json
+streammasterwebui/.next/static/7txxKJv1kVcItM0JKBiH7/_buildManifest.js
+streammasterwebui/.next/static/7txxKJv1kVcItM0JKBiH7/_ssgManifest.js
+streammasterwebui/.next/static/chunks/8ded68f4-3b9ce9546a855c2d.js
+streammasterwebui/.next/static/chunks/131c4705-6564d7e8f820c69c.js
+streammasterwebui/.next/static/chunks/154-dafe5b7a0608b307.js
+streammasterwebui/.next/static/chunks/303-20c7ab0097133373.js
+streammasterwebui/.next/static/chunks/362-706c06ccf757f723.js
+streammasterwebui/.next/static/chunks/384-ac6c8128c1a395b9.js
+streammasterwebui/.next/static/chunks/445-99d534f5da877b62.js
+streammasterwebui/.next/static/chunks/546-04baf9feef372a78.js
+streammasterwebui/.next/static/chunks/574-00b1607cffa6c6d1.js
+streammasterwebui/.next/static/chunks/603-347bdbb015130fb5.js
+streammasterwebui/.next/static/chunks/639-046b9fe908e48608.js
+streammasterwebui/.next/static/chunks/674-d318027c7b60abec.js
+streammasterwebui/.next/static/chunks/677-dcfc5e77e6d7ee80.js
+streammasterwebui/.next/static/chunks/847-41330ed2c7f4c2b3.js
+streammasterwebui/.next/static/chunks/878-d2259ca929bf81d5.js
+streammasterwebui/.next/static/chunks/897-7fe2c199fb272215.js
+streammasterwebui/.next/static/chunks/924-9caa938434eb7a10.js
+streammasterwebui/.next/static/chunks/934-2a45794cb058d67d.js
+streammasterwebui/.next/static/chunks/961-fe373da927c45d45.js
+streammasterwebui/.next/static/chunks/46170725-7b1d87a50db78144.js
+streammasterwebui/.next/static/chunks/main-app-858ec4814bffd67e.js
+streammasterwebui/.next/static/chunks/main-dbf90be5aa14c5c7.js
+streammasterwebui/.next/static/chunks/polyfills-c67a75d1b6f99dc8.js
+streammasterwebui/.next/static/chunks/webpack-c61622c3f6720a2d.js
+streammasterwebui/.next/static/chunks/app/_not-found-52982da793a0ed32.js
+streammasterwebui/.next/static/chunks/app/layout-9fc468c99cb9f5a2.js
+streammasterwebui/.next/static/chunks/app/page-33edecba1c0bd6b5.js
+streammasterwebui/.next/static/chunks/app/editor/files/page-40fc1bb56941fe89.js
+streammasterwebui/.next/static/chunks/app/editor/playlist/page-bdd83f7f8f918325.js
+streammasterwebui/.next/static/chunks/app/editor/streamgroup/page-3b21a4eca1e1ca66.js
+streammasterwebui/.next/static/chunks/app/queuestatus/page-e42c48f229648401.js
+streammasterwebui/.next/static/chunks/app/settings/page-93d740a6e2be7dd5.js
+streammasterwebui/.next/static/chunks/app/streamingstatus/page-ada7b4678a6ef1e8.js
+streammasterwebui/.next/static/chunks/pages/_app-21c7c97eaa695315.js
+streammasterwebui/.next/static/chunks/pages/_error-e656caf36ba3f164.js
+streammasterwebui/.next/static/css/2e64aa967d2f8ea5.css
+streammasterwebui/.next/static/css/4e7adb076a346271.css
+streammasterwebui/.next/static/css/7e1313103c68518e.css
+streammasterwebui/.next/static/css/025edf8266900544.css
+streammasterwebui/.next/static/css/f004232aab4b8e4e.css
+streammasterwebui/.next/static/css/fbe26fcaae408baf.css
+streammasterwebui/.next/types/app/page.ts
+streammasterwebui/.next/types/app/queuestatus/page.ts
+streammasterwebui/.next/types/app/settings/page.ts
+streammasterwebui/.next/types/app/streamingstatus/page.ts
