--- a/streammasterwebui/.vscode/launch.json
+++ b/streammasterwebui/.vscode/launch.json
@@ -9,7 +9,7 @@
     },
     {
       "name": "Next.js: debug client-side",
-      "type": "chrome",
+      "type": "msedge",
       "request": "launch",
       "url": "http://localhost:3000"
     },
@@ -21,17 +21,8 @@
       "serverReadyAction": {
         "pattern": "- Local:.+(https?://.+)",
         "uriFormat": "%s",
-        "action": "debugWithChrome"
+        "action": "debugWithEdge"
       }
-    },
-
-    {
-      "name": "Launch Edge2",
-      "request": "launch",
-      "type": "msedge",
-      "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}",
-      // "outFiles": ["${fileDirname}/**/*.ts*"]
     },
     {
       "type": "vscode-edge-devtools.debug",
