--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -10,8 +10,6 @@
     "@types/react-redux": "^7.1.27",
     "@vidstack/react": "^0.6.13",
     "axios": "^1.5.1",
-    "babel-plugin-react-intl": "^8.2.25",
-    "eslint-config-canonical": "^40.0.9",
     "hls.js": "^1.4.10",
     "next": "latest",
     "normalize.css": "^8.0.1",
@@ -38,16 +36,17 @@
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
     "@formatjs/cli": "^6.2.0",
-    "@next/eslint-plugin-next": "^13.5.3",
+    "@next/eslint-plugin-next": "^13.5.4",
     "@rtk-query/codegen-openapi": "^1.0.0",
     "@types/react": "^18.2.24",
     "@types/uuid": "^9.0.4",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.3",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-canonical": "^4.12.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "extract-react-intl-messages": "^4.1.1",
     "typescript": "^4.9.5"
   },
