--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -60,7 +60,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "lint": "next lint",
+    "build:check": "npm run lint && npm run format:check && npm run type:check && npm run security:check",
+    "security:check": "npm audit --production --audit-level high",
+    "format": "prettier --write \"{components,pages,service,api-generator}/**/*.{js,ts,tsx,d.ts}\"",
+    "format:check": "prettier --check \"{components,pages,service,api-generator}/**/*.{js,ts,tsx,d.ts}\"",
+    "lint": "next lint --max-warnings=0 --ignore-path .gitignore .",
+    "type:check": "tsc",
+    "lint:fix": "next lint --fix --ignore-path .gitignore .",
     "start": "next start",
     "api": "npx @rtk-query/codegen-openapi openapi-config.ts",
     "prettier": "npx prettier --write ."
