--- a/streammasterwebui/tsconfig.json
+++ b/streammasterwebui/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
+      "@features/*": ["./features/*"],
       "@components/*": ["./components/*"],
       "@lib/*": ["./lib/*"],
     },
