--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "@fontsource/roboto": "^5.0.8",
-    "@microsoft/signalr": "^7.0.11",
-    "@mui/icons-material": "^5.14.9",
+    "@microsoft/signalr": "^7.0.12",
+    "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.10",
-    "@reduxjs/toolkit": "^1.9.6",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
-    "@types/react-dom": "^18.2.8",
+    "@types/react-dom": "^18.2.13",
     "@types/react-redux": "^7.1.27",
     "@vidstack/react": "^0.6.13",
     "axios": "^1.5.1",
@@ -34,18 +34,18 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.22.15",
-    "@babel/preset-typescript": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.2",
     "@formatjs/cli": "^6.2.0",
     "@next/eslint-plugin-next": "^13.5.4",
     "@rtk-query/codegen-openapi": "^1.0.0",
-    "@types/react": "^18.2.24",
-    "@types/uuid": "^9.0.4",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@types/react": "^18.2.28",
+    "@types/uuid": "^9.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^8.50.0",
-    "eslint-config-next": "^13.5.3",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.4",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-unused-imports": "^3.0.0",
     "typescript": "^4.9.5"
   },
@@ -60,6 +60,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "builddev": "npm run build && cp -r build/* ..StreamMasterAPI\binDebug\net7.0wwwroot -force",
     "build:check": "npm run lint && npm run format:check && npm run type:check && npm run security:check",
     "security:check": "npm audit --production --audit-level high",
     "format": "prettier --write \"{components,pages,service,api-generator}/**/*.{js,ts,tsx,d.ts}\"",
