--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -1,20 +1,14 @@
 {
   "dependencies": {
-    "@fontsource/roboto": "^5.0.8",
     "@microsoft/signalr": "^7.0.12",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.10",
     "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^5.17.0",
     "@types/react-dom": "^18.2.13",
     "@types/react-redux": "^7.1.27",
     "@vidstack/react": "^0.6.13",
     "axios": "^1.5.1",
-    "esbuild-runner": "^2.2.2",
-    "hls.js": "^1.4.10",
     "next": "latest",
-    "normalize.css": "^8.0.1",
-    "planby": "^1.1.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.3",
@@ -23,21 +17,13 @@
     "react-intl": "^6.4.7",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "latest",
-    "react-router-dom": "^6.16.0",
-    "recharts": "^2.7.3",
     "redux-persist": "^6.0.0",
-    "sharp": "^0.32.6",
     "use-debounce": "^9.0.4",
-    "uuid": "^9.0.1",
-    "video.js": "^8.5.2",
-    "vidstack": "^0.6.13"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.22.15",
-    "@babel/preset-typescript": "^7.23.2",
-    "@formatjs/cli": "^6.2.0",
-    "@next/eslint-plugin-next": "^13.5.4",
     "@rtk-query/codegen-openapi": "^1.0.0",
+    "@types/node": "20.8.6",
     "@types/react": "^18.2.28",
     "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
@@ -45,7 +31,6 @@
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.4",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-unused-imports": "^3.0.0",
     "typescript": "^4.9.5"
   },
