--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -28,6 +28,8 @@
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
+    "esbuild": "^0.19.5",
+    "esbuild-runner": "^2.2.2",
     "eslint": "^8.52.0",
     "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^9.0.0",
