git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,4 @@ StreamMasterAPI/wwwroot/initialize.js
 streammasterwebui/package-lock.json
 streammasterwebui/package-lock.json
 streammasterwebui/deps.txt
+streammasterwebui/dist/
