format and lint clean up

--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -62,15 +62,14 @@
     "build": "vite build",
     "preview": "vite preview",
     "builddev": "npm run build && cp -r dist/* ..StreamMasterAPI\\bin\\Debug\\net7.0\\wwwroot -force",
-    "build:check": "npm run foramt && npm run format:check && npm run type:check && npm run security:check",
-    "security:check": "npm audit --production --audit-level high",
-    "format": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "format:check": "prettier --check \"{components,pages,service,api-generator}/**/*.{js,ts,tsx,d.ts}\"",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "build:check": "npm run prettier:check && npm run lint && npm run type:check && npm run security:check",
+    "security:check": "npm audit --omit=dev --audit-level high",
+    "lint": "eslint --ignore-path .estlintignore . --ext .js,.jsx,.ts,.tsx",
     "type:check": "tsc",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:fix": "eslint --ignore-path .estlintignore . --ext .js,.jsx,.ts,.tsx --fix",
     "buildapi": "npx @rtk-query/codegen-openapi openapi-config.ts",
     "prettier": "npx prettier --write .",
+    "prettier:check": "prettier --check \"{components,pages,service,api-generator}/**/*.{js,ts,tsx,d.ts}\"",
     "test": "vitest run",
     "watch": "vitest watch",
     "coverage": "vitest run --coverage",
