--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -84,10 +84,10 @@ RUN apt-get update && apt-get install -y \
     zip \
     zlib1g-dev
 
-RUN curl -sL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
-    && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
-    && update-ca-certificates \
-    && apt-get update && apt-get install -yq nodejs
+# RUN curl -sL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
+#     && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
+#     && update-ca-certificates \
+#     && apt-get update && apt-get install -yq nodejs
 
 # Clone and install nv-codec-headers
 RUN git clone https://github.com/FFmpeg/nv-codec-headers.git && cd nv-codec-headers && git checkout n12.1.14.0 && make install && cd ..
@@ -177,34 +177,8 @@ RUN cd ffmpeg && \
 
 # Just needed the pkgconfig from libsvtav1enc. this is a hack but works
 RUN apt remove libsvtav1enc-dev -y
+
 RUN cd ffmpeg && make -j$(nproc) && make install && cd .. && ffmpeg -codecs
-
-# Cleanup
-# RUN apt -yq remove automake \
-#     cmake \
-#     frei0r-plugins-dev \
-#     libaom-dev \
-#     libass-dev \
-#     libcaca-dev \
-#     libcodec2-dev \
-#     libchromaprint-dev \
-#     libdav1d-dev \
-#     libfdk-aac-dev \
-#     libgl-dev \
-#     libgme-dev \
-#     libgmp-dev \
-#     libgnutls28-dev \
-#     libleptonica-dev \
-#     libmfx-gen-dev \
-#     libmp3lame-dev \
-#     libmysofa-dev \
-#     libopencore-amrnb-dev \
-#     libopencore-amrwb-dev \
-#     libopus-dev \
-#     libpng-dev
-
-# RUN apt autoremove -yq && apt clean -yq && apt autoclean -yq
-
-# RUN apt-get install -y --no-install-recommends libcaca0 libmysofa1 libass9 libgme0 libchromaprint1 libopencore-amrnb0 libopencore-amrwb0 libfdk-aac2 liblept5
+RUN cp /usr/local/bin/ffmpeg /usr/bin/ffmpeg
 
 RUN rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/* ./nv-codec-headers ./ffmpeg
