--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -6,15 +6,13 @@ ENV DEBIAN_FRONTEND noninteractive
 
 RUN mkdir -p /etc/apt/keyrings
 # Install necessary dependencies
-RUN apt-get update -yq  && apt-get install -yq \
-    ffmpeg gosu ca-certificates curl gnupg git vim build-essential
+RUN apt-get update -yq && apt-get install -yq ffmpeg
 
-RUN curl -sL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
-    && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
-    && apt-get update && apt-get install -yq nodejs \
-    && rm -rf /var/lib/apt/lists/* \
-    && update-ca-certificates
-
+# RUN curl -sL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
+#     && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_20.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
+#     && apt-get update && apt-get install -yq nodejs \
+#     && rm -rf /var/lib/apt/lists/* \
+#     && update-ca-certificates
 
 # Cleanup
-RUN rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/* ./nv-codec-headers ./ffmpeg
+RUN rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
