--- a/StreamMaster.SchedulesDirectAPI/StreamMaster.SchedulesDirectAPI.csproj
+++ b/StreamMaster.SchedulesDirectAPI/StreamMaster.SchedulesDirectAPI.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.0" />
     <PackageReference Include="System.Text.Json" Version="7.0.3" />
   </ItemGroup>
 
