--- a/StreamMasterAPI/appsettings.json
+++ b/StreamMasterAPI/appsettings.json
@@ -3,12 +3,13 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.AspNetCore.SignalR": "Debug",
+      //"Microsoft.AspNetCore.SignalR": "Debug",
       //"Microsoft.AspNetCore.Http.Connections": "Debug",
       "Microsoft.AspNetCore.Mvc.Formatters": "Debug",
       "System.Xml.Serialization": "Debug",
+      "StreamMaster.SchedulesDirectAPI.Services.SchedulesDirectService": "Debug",
       "StreamMasterInfrastructure.VideoStreamManager": "Debug",
-      "StreamMasterInfrastructure.VideoStreamManager.CircularRingBuffer": "Information",
+      "StreamMasterInfrastructure.VideoStreamManager.CircularRingBuffer": "Information"
       //"StreamMasterInfrastructure.Authentication": "Debug"
     }
   },
