--- a/StreamMasterAPI/appsettings.json
+++ b/StreamMasterAPI/appsettings.json
@@ -7,7 +7,7 @@
       //"Microsoft.AspNetCore.Http.Connections": "Debug",
       "Microsoft.AspNetCore.Mvc.Formatters": "Debug",
       "System.Xml.Serialization": "Debug",
-      "StreamMaster.SchedulesDirectAPI.Services.SchedulesDirectService": "Debug",
+      //"StreamMaster.SchedulesDirectAPI.Services.SchedulesDirectService": "Debug",
       "StreamMasterInfrastructure.VideoStreamManager": "Debug",
       "StreamMasterInfrastructure.VideoStreamManager.CircularRingBuffer": "Information"
       //"StreamMasterInfrastructure.Authentication": "Debug"
