--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@rtk-query/codegen-openapi": "^1.0.0",
+    "@types/chroma-js": "^2.4.3",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.15",
