cleanup added in per videostream proxy

--- a/M3U8ParserConsole/M3U8ParserConsole.csproj
+++ b/M3U8ParserConsole/M3U8ParserConsole.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,9 +7,5 @@
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\StreamMaster.M3U8\StreamMaster.M3U8.csproj" />
-  </ItemGroup>
 
 </Project>
