--- a/StreamMasterAPI/appsettings.json
+++ b/StreamMasterAPI/appsettings.json
@@ -4,7 +4,7 @@
       "Default": "Information",
       "Microsoft": "Warning",
       //"Microsoft.AspNetCore.SignalR": "Debug",
-      "Microsoft.AspNetCore.Http.Connections": "Debug",
+      //"Microsoft.AspNetCore.Http.Connections": "Debug",
       "Microsoft.AspNetCore.Mvc.Formatters": "Debug",
       "System.Xml.Serialization": "Debug",
       //"StreamMaster.SchedulesDirectAPI.Services.SchedulesDirectService": "Debug",
